--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,18 @@
             <version>4.32.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aventstack/chaintest-core -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>chaintest-core</artifactId>
+            <version>1.0.12</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
     </dependencies>
 
